<resources>
    <string name="app_name">Conversor de Moedas $</string>
    <string name="qual_o_valor_em_real">Qual o valor em Real? </string>
    <string name="valor_em_dolar">Valor em Dolar: </string>
    <string name="valor_em_euro">Valor em Euro: </string>
    <string name="calcular">Converter</string>
    <string name="valor_em_kwanza">Valor em kwanza: </string>
    <string name="Informe_valor">Informe um Valor!</string>

</resources>