<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vesper_libre_black"
        android:gravity="center"
        android:text="@string/qual_o_valor_em_real"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edit_value"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:hint="Ex:         1.99"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/vesper_libre_black"
            android:text="@string/valor_em_dolar"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="150px"
            android:layout_height="150px"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bandeira" />


    </LinearLayout>

    <TextView
        android:id="@+id/text_Dolar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/valor_em_dolar"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/vesper_libre_black"
            android:text="@string/valor_em_euro"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="150px"
            android:layout_height="150px"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/europa" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_Euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/valor_em_euro"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/vesper_libre_black"
            android:text="@string/valor_em_kwanza"
            android:textSize="18sp" />


        <ImageView
            android:layout_width="150px"
            android:layout_height="150px"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/angola" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_Kwanza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/valor_em_kwanza"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/button_Calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/colorTheme"
        android:fontFamily="@font/vesper_libre_black"
        android:text="@string/calcular"
        android:textColor="@color/colorLight" />
</LinearLayout>